# WeatherDataProcessing

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TextFileProcessor.cpp  TextFileProcessor.h  conanfile.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
Controller/: StationController.cpp  StationController.h
config/: Configuration.cpp  Configuration.h  Connection.cpp  Connection.h  models.cpp  models.h
model/: Sensor.cpp  Sensor.h  Station.cpp  Station.h
src/: main.cpp
src/components/: ProcessingComponent.cpp
src/components/processing-component/: DataProcessingInterface.cpp  DataProcessingInterface.hpp  ProcessingComponent.cpp  ProcessingComponent.hpp
src/components/transformer-component/: DataTransformerInterface.cpp  TransformerComponent.cpp  TransformerComponent.hpp
src/entities/: Sensor.cpp  Sensor.hpp  Station.cpp  Station.hpp
src/shared/: Shared.cpp  Shared.h
test-data/Jazmin/: 20150201.txt
tests/: main-test.cpp
tests/components/processing-component/: ProcessingComponentTests.cpp  ProcessingComponentTests.h
view/: CreateStationWindow.cpp  CreateStationWindow.h  CreateStationWindow.ui  adjustWindow.cpp  adjustWindow.h  adjustwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_CreateStationWindow.h  ui_adjustWindow.h  ui_mainwindow.h
weather-backend-app.build/Debug/ALL_BUILD.build/: Script-914C691F73F947C9A2441E59.sh  dgph  dgph~
weather-backend-app.build/Debug/ZERO_CHECK.build/: Script-3A68D744E8AB4A3FB730E464.sh  dgph
weather-backend-app.xcodeproj/: project.pbxproj
